# ising

./: CMakeLists.txt  README.md  input  io.hpp  ising  ising.cpp  main  main.cpp  main.gcc  measurements.hpp  physicalParameters.hpp  random.hpp  spinConfiguration.hpp  updating.hpp
include/: Z2.hpp  io.hpp  parameters.hpp  random.hpp  spin_conf.hpp
ising/: main.cpp~
ising_old/: main.cpp  measurements.hpp  physicalParameters.hpp  spinConfiguration.hpp  updating.hpp
lib/: geometry.cpp  io.cpp  random.cpp  simulation.cpp  spin_conf_def.cpp
manual/: manual_ising.aux  manual_ising.fdb_latexmk  manual_ising.fls  manual_ising.tex
src/: main.cpp
